--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/12/18/paw-paw-picks-up-win-over-union/
 images:
-- name: powerlines-power-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
-- name: power-lines-power-lines-empty-space-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-oily-mcoilface.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
-- name: fence-mexico-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
-- name: flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
-- name: dragon_close-up-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-norman-rockwell-ruby-bridges.jpg
-- name: containership-containership-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-emily-carr.jpg
-- name: stalin-time-palace-water-fountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-palace-water-fountain.jpg
-- name: window-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smoking-cigarette.jpg
-- name: school-clouds-church-clouds-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
-- name: carry-load-carryload-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
-- name: yosemite-yosemite-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purp-paper.jpg
-- name: nazi-invasion-highway-granary-truck_36557728122_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary-truck_36557728122_o.jpg
-- name: subway-subway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
+- name: copper-circuit-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
+- name: status-berlin-status-berlin-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
+- name: curtain-curtain-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-color.jpg
+- name: mistywoods-babyfoot-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
+- name: sand-hand-sand-hand-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
+- name: liberty-back-statue-liberty-back-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-green-zuma.jpg
+- name: legal-statue-legalstatue-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-paper.jpg
+- name: copper-circuit-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-berlin-crowds.jpg
+- name: nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-checkpoint-charlie-mcdonalds.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: legal-statue-legalstatue-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-green-zuma.jpg
+- name: old-school-house-old-schoolhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crunch-paper.jpg
+- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
 - name: store-on-corner-store-dali-two.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-two.jpg
-- name: beach-rocks-beach-rocks-currents-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-constitution.jpg
-- name: stories-new-69-120-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-69-120-800-500-0-max-0--5--1.jpg
-- name: death-valley-death-valley-national-park-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
-- name: bordercrossing-bordercrossing-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-really-hot.jpg
-- name: san-francisco-street-view-san-francisco-street-view-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-plentiful.jpg
-- name: gypsymosaic-gypsy-eyes-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-soul.jpg
-- name: nazi-invasion-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-working-waterfront-2.jpg
-- name: abandonedbuildings_alien_goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alien_goggles.jpg
-- name: nyc-flag-nycflag-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-two.jpg
-- name: bf-skinner-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-la_36349151230_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
-- name: oldcabin-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gan-vogh.jpg
-- name: berlinwall-DSC-0084-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-yellow-collage.jpg
-- name: subway-subway-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-pablo-blue.jpg
-- name: la-muse-miami-beach-walkway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-miami-beach-walkway.jpg
-- name: docks-docks-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
-- name: bf-skinner-sunflower-big-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sunflower-big-green.jpg
-- name: oldhousecars-house-old-cars-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-- name: oldhouse-oldhouse-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purp-paper.jpg
-- name: rain-princess-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-berline-wall-old-building.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit-2.jpg
-- name: oldhouse-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-electricity.jpg
-- name: abandonedbuildings_dark_rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_rain.jpg
-- name: oldhousecars-house-old-cars-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sand-paper.jpg
-- name: trucksilo-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purp-paper.jpg
-- name: mediterranean-mediterranean-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-blocks.jpg
-- name: mistywoods-babyfoot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot.jpg
-- name: statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
-- name: subway-subway-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-sand-paper.jpg
-- name: downtheline-downtheline-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-mucha-mult.jpg
-- name: amusement-park-amusement-park-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-- name: old-granary-field-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-deep-connections.jpg
-- name: braceros-domingo-ulloa-train-in-station-two-coming.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-in-station-two-coming.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+- name: supreme-court-supremecourt-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-electricity.jpg
+- name: la-muse-hollywood-sign-hills.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-hills.jpg
+- name: capital-battle-capitolbattle-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-post-modern.jpg
+- name: catacombs-catacombs-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-aqua.jpg
+- name: stories-status-berlin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-dark-dali.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: walled-garden-walled-garden-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
+- name: mosaic-face-mosaic-face-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
+- name: adam-smith-adam-smith-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
+- name: docks-docks-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+- name: school-clouds-church-clouds-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sunday.jpg
+- name: supreme-court-supremecourt-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-two.jpg
+- name: razorcliff-razorcliff-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smoking-cigarette.jpg
+- name: legal-statue-legalstatue-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
+- name: curtain-curtain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
+- name: art-museum-art-museum-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit.jpg
+- name: old-cabin-oldcabin-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
+- name: old-cabin-oldcabin-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-electricity.jpg
+- name: walled-garden-walled-garden-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
+- name: udnie-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
+- name: stories-capitolbattle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capitolbattle-blue-circuit.jpg
+- name: hollywood-building-hollywood-building-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-propaganda-leaflets.jpg
+- name: school-clouds-church-clouds-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-rainbow-festival.jpg
+- name: old-church-oldchurch-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
+- name: downtown-los-angeles-downtown-la-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
+- name: mosaic-face-mosaic-face-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-emily-carr.jpg
+- name: store-on-corner-store-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alberto-giacometti.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+- name: san-francisco-street-view-san-francisco-street-view-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smoking-cigarette.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
+- name: hollywood-building-hollywood-building-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
+- name: sand-hand-sand-hand-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
 ---
 Resolving For A Healthy 2020? Talking To Your Family Is A Great Way To Start.&nbsp;Busy Year For Sanitary District.&nbsp;'Skywalker' Rises Again; 'Little Women' Go Big At Box Office.&nbsp;Camden Cove Employees Take Home Awards.&nbsp;Young Boy Dead As Chicopee Police Search For Second Child Near River.&nbsp;Cavs Try To Take 'next Step' In Orange Bowl Against Gators.&nbsp;Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;In 2019, We Ate.&nbsp;
