--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/12/18/paw-paw-picks-up-win-over-union/
 images:
-- name: copper-circuit-old-building-seattle-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
-- name: status-berlin-status-berlin-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-china-prop.jpg
-- name: curtain-curtain-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-ww2-color.jpg
-- name: mistywoods-babyfoot-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
-- name: sand-hand-sand-hand-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
-- name: liberty-back-statue-liberty-back-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-green-zuma.jpg
-- name: legal-statue-legalstatue-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-paper.jpg
-- name: copper-circuit-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-berlin-crowds.jpg
-- name: nazi-invasion-checkpoint-charlie-mcdonalds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-checkpoint-charlie-mcdonalds.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-- name: old-granary-field-oldhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
-- name: legal-statue-legalstatue-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-green-zuma.jpg
-- name: old-school-house-old-schoolhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crunch-paper.jpg
+- name: capital-battle-capitolbattle-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
+- name: store-on-corner-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: nazi-invasion-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_1184.jpg
+- name: oldhouse-oldhouse-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-free-woman.jpg
+- name: machine-road-machine-road-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crunch-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+- name: san-francisco-city-bridge-sf-city-bridge-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-color.jpg
+- name: stories-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit.jpg
+- name: blossombar-smooth-ride-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-24-99.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: abandonedbuildings_yellow_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_paper.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
+- name: oldhouse-oldhouse-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crafty-painting.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+- name: old-barn-old-barn-1500-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-monet-one.jpg
+- name: catacombs-catacombs-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
+- name: meadowbutterfly-meadow-butterfly-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-monet-one.jpg
+- name: copper-circuit-sailboat-in-front-of-housing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-sailboat-in-front-of-housing.jpg
+- name: dragon-desert-desert-dragon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-satan-red.jpg
+- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+- name: machine-road-machine-road-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-deep-connections.jpg
+- name: razorwire-DSC-0080-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-emily-carr.jpg
+- name: oldcabin-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-rainbow-festival.jpg
+- name: old-granary-field-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
+- name: udnie-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6174.jpg
+- name: liberty-back-statue-liberty-back-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
+- name: braceros-domingo-ulloa-seattle-looking-north.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-seattle-looking-north.jpg
+- name: crow-crow-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-pond.jpg
+- name: status-berlin-status-berlin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
+- name: curtain-curtain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-spagetti-accident.jpg
+- name: oldbarn-oldbarn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-emily-carr.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+- name: nyc-flag-nycflag-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
+- name: copper-circuit-through-berlin-wall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-through-berlin-wall.jpg
+- name: braceros-domingo-ulloa-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-in-station-two-coming.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
+- name: eduardo-eduardo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
 - name: nazi-invasion-seattle-public-market_36725946605_o.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
-- name: store-on-corner-store-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-two.jpg
-- name: window-window-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
-- name: supreme-court-supremecourt-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-electricity.jpg
-- name: la-muse-hollywood-sign-hills.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-hills.jpg
-- name: capital-battle-capitolbattle-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-post-modern.jpg
-- name: catacombs-catacombs-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-aqua.jpg
-- name: stories-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-dark-dali.jpg
-- name: rain-princess-IMG_7162.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
-- name: walled-garden-walled-garden-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
-- name: mosaic-face-mosaic-face-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
-- name: adam-smith-adam-smith-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
-- name: docks-docks-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-- name: school-clouds-church-clouds-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sunday.jpg
-- name: supreme-court-supremecourt-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-two.jpg
-- name: razorcliff-razorcliff-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-smoking-cigarette.jpg
-- name: legal-statue-legalstatue-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
-- name: curtain-curtain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
-- name: art-museum-art-museum-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit.jpg
-- name: old-cabin-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-smooth-ride.jpg
-- name: old-cabin-oldcabin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-electricity.jpg
-- name: walled-garden-walled-garden-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
-- name: udnie-DSC_0033.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-- name: stories-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capitolbattle-blue-circuit.jpg
-- name: hollywood-building-hollywood-building-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-propaganda-leaflets.jpg
-- name: school-clouds-church-clouds-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-rainbow-festival.jpg
-- name: old-church-oldchurch-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
-- name: downtown-los-angeles-downtown-la-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-space-pizza.JPG
-- name: mosaic-face-mosaic-face-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-emily-carr.jpg
-- name: store-on-corner-store-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alberto-giacometti.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
-- name: san-francisco-street-view-san-francisco-street-view-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-smoking-cigarette.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-- name: hollywood-building-hollywood-building-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
-- name: sand-hand-sand-hand-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-4.jpg
+- name: razorcliff-razorcliff-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-post-modern.jpg
+- name: castle-wall-DSC-0067-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-atari-asteroids.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-crunch-paper.jpg
+- name: nyc-flag-nycflag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag.jpg
+- name: mistywoods-babyfoot-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-post-modern.jpg
+- name: udnie-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
+- name: curtain-curtain-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+- name: oldbarn-oldbarn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-deep-connections.jpg
 ---
 Resolving For A Healthy 2020? Talking To Your Family Is A Great Way To Start.&nbsp;Busy Year For Sanitary District.&nbsp;'Skywalker' Rises Again; 'Little Women' Go Big At Box Office.&nbsp;Camden Cove Employees Take Home Awards.&nbsp;Young Boy Dead As Chicopee Police Search For Second Child Near River.&nbsp;Cavs Try To Take 'next Step' In Orange Bowl Against Gators.&nbsp;Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;In 2019, We Ate.&nbsp;
